2010-03-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/ibmrs6000.h (ORDINARY_LINK): Move definition ...
	* s/aix4-2.h (ORDINARY_LINK): ... here.

2010-03-21  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (abs_builddir): Define.
	(bootstrap_exe): Use it.
	(VPATH): Use $(srcdir) instead of @srcdir@.

2010-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (bootstrap_exe): Use an absolute name.

2010-03-20  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for old GNU/Linux using libc version 5.
	* m/alpha.h (LINUX_SBRK_BUG): Remove definition.
	* emacs.c (main): Remove code depending on LINUX_SBRK_BUG.

	Consolidate redundant definitions in s/bsd-common.h.
	* s/bsd-common.h (BSD4_2, TABDLY, TAB3, HAVE_TERMIOS, NO_TERMIO)
	(LIBS_DEBUG, SYSV_SYSTEM_DIR, UNEXEC, NARROWPROTO, BSD_PGRPS)
	(LDAV_SYMBOL, KERNEL_FILE): Define (or undefine) here instead of
	doing it in all files that include this one.
	* s/gnu.h (BSD4_2, TABDLY, TAB3, HAVE_TERMIOS, NO_TERMIO)
	(LIBS_DEBUG, SYSV_SYSTEM_DIR, UNEXEC, NARROWPROTO, BSD_PGRPS)
	(LDAV_SYMBOL, KERNEL_FILE): Remove.
	* s/freebsd.h (BSD4_2, TABDLY, TAB3, HAVE_TERMIOS, NO_TERMIO)
	(LIBS_DEBUG, SYSV_SYSTEM_DIR, UNEXEC, NARROWPROTO, BSD_PGRPS)
	(LDAV_SYMBOL, KERNEL_FILE): Remove.
	* s/netbsd.h (BSD4_2, TABDLY, TAB3, HAVE_TERMIOS, NO_TERMIO)
	(LIBS_DEBUG, SYSV_SYSTEM_DIR, UNEXEC, NARROWPROTO, BSD_PGRPS)
	(LDAV_SYMBOL, KERNEL_FILE): Remove.

	Consolidate redundant definitions.
	* s/usg5-4.h (sigsetmask, PTY_TTY_NAME_SPRINTF): Do not define,
	it's undefined in all files that include this one.
	(POSIX_SIGNALS): Define here instead of doing it in all files that
	include this one.
	* s/irix6-5.h (sigsetmask, PTY_TTY_NAME_SPRINTF): Do not undef.
	(POSIX_SIGNALS): Do not define.
	* s/sol2-6.h (sigsetmask, PTY_TTY_NAME_SPRINTF): Do not undef.
	(POSIX_SIGNALS): Do not define.
	* s/unixware.h (sigsetmask, PTY_TTY_NAME_SPRINTF): Do not undef.
	(POSIX_SIGNALS): Do not define.

	Remove support for old UNIX System V systems.